dist/templates/graphql-engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --build none --chart --out dist --secrets-as-files
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: graphql-engine
  name: graphql-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: graphql-engine
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --build none --chart --out dist --secrets-as-files
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/timestep-default: "true"
        io.kompose.service: graphql-engine
    spec:
      containers:
        - args:
            - graphql-engine
            - serve
          image: hasura/graphql-engine:v2.29.0
          name: graphql-engine
          resources: {}
      restartPolicy: Always
status: {}
