dist/templates/timestep-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: timestep-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/timestep-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/timestep-default: "true"
